add app component and routes

--- a/src/app/components/initiative-tracker/initiative-tracker.html
+++ b/src/app/components/initiative-tracker/initiative-tracker.html
@@ -4,4 +4,6 @@
         <li>{{combatant.name}}{{combatant.id === activeCombatantId() ? '- active' : ''}}</li>
     }
     </ul>
+} @else {
+    <p>No combatants available.</p>
 }
